--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>CubeBuilder</title>
-    <base href="/CubeBuilder/">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <base href="/CubeBuilder/"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   <link rel="stylesheet" href="styles.44a6fa32884215629284.css"></head>
   <body>
     <app-root></app-root>
-  <script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.35a5ca1855eb057f016a.js" defer></script><script src="main.e1d25cd553a3864aed97.js" defer></script></body>
+  <script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.9bf4dad123bd95dda86e.js" defer></script><script src="main.e582d4aafef19fd3f187.js" defer></script></body>
 </html>
